A3/tests/test (1).c.err
sclp error: File: tests/test (1).c, Line: 9: Assignment statement data type not compatible
