A3/tests/test (1).c.myerr
cs316: Error: Line 9: Data Type not compatabile in the assignment
